correct alignment issue in MQs on get garden page

--- a/css/_mediaqueries.scss
+++ b/css/_mediaqueries.scss
@@ -19,6 +19,14 @@ h3 {
 	width: 25%;
 }
 
+
+/***get garden page***/
+.get-garden {
+	margin-right: auto;
+	margin-left: auto;
+}
+
+
 /***rec info page***/
 .dropdown-rec {
 	max-width: (($col * 9) + ($gut * 8));
